--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body ng-app="rotiApp">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        Kizuna
+      </a>
+    </div>
+  </nav>
   <div class="container">
     <%= yield %>
   </div>
