--- a/app/views/templates/dashboard.html.slim
+++ b/app/views/templates/dashboard.html.slim
@@ -1,2 +1,21 @@
-.col-md-6
-  ' controller: {{ name }}
+.ng-cloak(ng-init="init()")
+  .col-md-6
+    h4 Rangkuman Penjualan
+    hr
+      table.table.table-striped.table-condensed
+        thead
+          tr
+            th 
+              'Tanggal Penjualan
+        tbody(ng-repeat="sale in sales")
+          tr
+            td 
+              '{{ sale.tanggal }}
+        
+  .col-md-6
+    /!h4 
+    /!  Tambahkan Penjualan
+    /!hr
+    /!h4 
+    /!  Links
+    /!hr
