--- a/app/views/templates/dashboard.html.slim
+++ b/app/views/templates/dashboard.html.slim
@@ -2,15 +2,16 @@
   .col-md-6
     h4 Rangkuman Penjualan
     hr
-      table.table.table-striped.table-condensed
-        thead
-          tr
-            th 
-              'Tanggal Penjualan
-        tbody(ng-repeat="sale in sales")
-          tr
-            td 
-              '{{ sale.tanggal }}
+      div.panel-group#accordion(role="tablist" aria-multiselectable="true") 
+        div.panel.panel-default(ng-repeat="sale in sales")
+          div.panel-heading(role="tab" id="saleTabHead{{ $index }}")
+            h4.panel-title
+              a(data-toggle="collapse" data-parent="#accordion" href="#saleTab{{ $index }}" aria-expanded="true" aria-controls="saleTab{{ $index }}")
+                ' Penjualan {{ sale.tanggal | date:'dd MMM yyyy' }}
+          div.panel-collapse.collapse(id="saleTab{{ $index }}" role="tabpanel" aria-labbeledby="saleTabHead{{ $index }}")
+            div.panel-body
+              ' {{ sale.rotis }}
+              ' {{ sale.roti_sales }}
         
   .col-md-6
     /!h4 
