--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
 <body ng-app="rotiApp">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         Kizuna
       </a>
+      <ul class="nav navbar-nav">
+        <li><a href="/rotis">Roti</a></li>
+      </ul>
     </div>
   </nav>
   <div class="container">
