--- a/app/views/templates/dashboard.html.slim
+++ b/app/views/templates/dashboard.html.slim
@@ -3,15 +3,19 @@
     h4 Rangkuman Penjualan
     hr
       div.panel-group#accordion
-        div.panel.panel-default(ng-repeat="(tanggal, sale) in sales")
+        div.panel.panel-default(ng-repeat="(tanggal, data) in sales")
           div.panel-heading(id="saleTabHead{{ $index }}")
             h4.panel-title
               a(data-toggle="collapse" data-parent="#accordion" data-target="#saleTab{{ $index }}" href="javascript:;")
                 ' Penjualan {{ tanggal | date:'dd MMM yyyy' }}
           div.panel-collapse.collapse(id="saleTab{{ $index }}" role="tabpanel")
             div.panel-body
-              div(ng-repeat="lokasi in sale")
-                ' {{ lokasi }}
+              div
+                li(ng-repeat="sale in data")
+                  ' {{ sale.lokasi }}
+                  ul
+                    li(ng-repeat="roti in sale.rotis")
+                      ' {{ roti.nama }} {{ roti.jumlah }} buah x &yen;{{ roti.harga }}
         
   .col-md-6
     /!h4 
