--- a/app/views/templates/dashboard.html.slim
+++ b/app/views/templates/dashboard.html.slim
@@ -6,7 +6,7 @@
         small
           a(href="#" ng-click="open()")
             i.fa.fa-plus-square
-    /! add sale modal template
+    /! -------  add sale modal template
     script(type="text/ng-template" id="AddRotiSaleTemplate.html")
       div.modal-header
         button.close(type="button" ng-click="cancel()")
@@ -15,22 +15,33 @@
       div.modal-body
         form
           div.form-group
-            label.control-label(for="sale-tanggal") Tanggal:
+            label.control-label(for="tanggal") Tanggal:
             p.input-group
-              input.form-control(type="text" datepicker-popup="dd-MMMM-yyyy" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="newRotiSale.tanggal")
+              input.form-control(type="text" datepicker-popup="dd.MM.yyyy" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="newRotiSale.tanggal")
               span.input-group-btn
                 button.btn.btn-default(type="button" ng-click="openDatePicker($event)")
                   i.glyphicon.glyphicon-calendar
-          div.form-group
-            label.control-label(for="lokasi") Lokasi:
-            select.form-control(ng-model="newRotiSale.lokasi" ng-options="lok as lok.nama for lok in lokasis") 
-          div.form-group
-            label.control-label(for="rotis") Roti:
-            select.form-control(ng-model="newRotiSale.rotis" ng-options="r as r.nama for r in rotis")
-      div.modal-footer
-        button.btn.btn-default(type="button" ng-click="cancel()") Tutup
-        button.btn.btn-primary(type="submit" ng-click="submit(newRotiSale)") Tambahkan
-    /! add sale modal template finish
+          tabset
+            tab(ng-repeat="lokasi in lokasis" heading="{{ lokasi.nama }}")
+              /! -- { #tgl: [{#lok}, {#lok}] }, #lok: { "lokasi": {obj.lok}, "rotis": {obj.rotis} }
+              div.tab-content(style="margin: 10px 0px 10px 0px;")
+                div.tab-pane.active
+                  div.row
+                    div.col-sm-6
+                      p.input-group(ng-repeat="roti in rotis")
+                        input.form-control(type="text")
+                        span.input-group-btn
+                          button.btn.btn-success(type="button" ng-click="increment()")
+                            i.glyphicon.glyphicon-plus
+                          button.btn.btn-warning(type="button" ng-click="decrement()")
+                            i.glyphicon.glyphicon-minus
+                    div.col-sm-6
+                      div.form-group
+                        input.form-control(type="text" ng-model="newRoti.jumlah")
+        div.modal-footer
+          button.btn.btn-default(type="button" ng-click="cancel()") Tutup
+          button.btn.btn-primary(type="submit" ng-click="submit(newRotiSale)") Tambahkan
+    /! ---- add sale modal template finish
     hr
       accordion(close-others="true")
         accordion-group(ng-repeat="(tgl, data) in rotisales" is-open="accst.open")
