--- a/app/views/templates/dashboard.html.slim
+++ b/app/views/templates/dashboard.html.slim
@@ -21,23 +21,29 @@
               span.input-group-btn
                 button.btn.btn-default(type="button" ng-click="openDatePicker($event)")
                   i.glyphicon.glyphicon-calendar
-          tabset
-            tab(ng-repeat="sale in newSale.sales" heading="{{ sale.lokasi.nama }}")
-              div.tab-content.row(style="margin: 10px 0px 10px 0px;")
-                div.tab-pane.active
-                  ul.list-inline
-                    li.col-sm-6(ng-repeat="roti in newSale.sales[$index].rotis")
-                      p.input-group.input-group-sm
-                        span.input-group-addon(style="font-weight: bold; color: #000;")
-                          ' {{ roti.jumlah }} 
-                        input.form-control(type="text" ng-model="roti.nama" readonly)
-                        span.input-group-btn
-                          button.btn(type="button" ng-click="increment(roti)")
-                            i.glyphicon.glyphicon-plus
-                          button.btn(type="button" ng-click="decrement(roti)")
-                            i.glyphicon.glyphicon-minus
-                          button.btn(type="button" ng-click="clear(roti)")
-                            i.glyphicon.glyphicon-refresh
+            hr
+            div.panel.with-nav-tabs.panel-success
+              div.panel-heading
+                ul.nav.nav-tabs
+                  li(ng-repeat="sale in newSale.sales" ng-class="isSelected($index) ? 'active' : ''")
+                    a(href="" data-toggle="tab" data-target="#tab{{$index}}" ng-click="select($index)")
+                      ' {{ sale.lokasi.nama }}
+              div.panel-body
+                div.tab-content
+                  div.tab-pane.active
+                    ul.list-inline
+                      li.col-sm-6(ng-repeat="roti in newSale.sales[selectedTab].rotis" id="tab{{$index}}")
+                        p.input-group.input-group-sm
+                          span.input-group-addon(style="font-weight: bold; color: #000;")
+                            ' {{ roti.jumlah }} 
+                          input.form-control(type="text" ng-model="roti.nama" readonly)
+                          span.input-group-btn
+                            button.btn(type="button" ng-click="increment(roti)")
+                              i.glyphicon.glyphicon-plus
+                            button.btn(type="button" ng-click="decrement(roti)")
+                              i.glyphicon.glyphicon-minus
+                            button.btn(type="button" ng-click="clear(roti)")
+                              i.glyphicon.glyphicon-refresh
       div.modal-footer
         button.btn.btn-default(type="button" ng-click="cancel()") Tutup
         button.btn.btn-primary(type="submit" ng-click="submit(newSale)") Tambahkan
