Add and remove Lokasi

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       </a>
       <ul class="nav navbar-nav">
         <li><a href="/rotis">Roti</a></li>
+        <li><a href="/lokasis">Lokasi</a></li>
       </ul>
     </div>
   </nav>
