Move modal controller to a new file

--- a/app/views/templates/dashboard.html.slim
+++ b/app/views/templates/dashboard.html.slim
@@ -45,6 +45,7 @@
                             button.btn(type="button" ng-click="clear(roti)")
                               i.glyphicon.glyphicon-refresh
       div.modal-footer
+        ' {{ total }}
         button.btn.btn-default(type="button" ng-click="cancel()") Tutup
         button.btn.btn-primary(type="submit" ng-click="submit(newSale)") Tambahkan
     /! ---- add sale modal template finish
