--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,8 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
-        Kizuna
+        KizunaBread
       </a>
-      <ul class="nav navbar-nav">
-        <li><a href="/rotis">Roti</a></li>
-        <li><a href="/lokasis">Lokasi</a></li>
-      </ul>
     </div>
   </nav>
   <div class="container">
