--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body ng-app="rotiApp">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        KizunaBread
-      </a>
-    </div>
-  </nav>
+  <%= render :partial => 'layouts/topbar' %>
   <div class="container">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
