--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
 <body ng-app="rotiApp">
   <%= render :partial => 'layouts/topbar' %>
   <div class="container">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if !notice.nil? %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if !alert.nil? %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </div>
 </body>
