--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,2 @@
-- if user_signed_in?
-  li
-    = link_to("Logout", destroy_user_session_path, :method => :delete)
-- else
-  li
-    = link_to("Login", new_user_session_path)
+div.ng-cloak
+  div(ng-view)
